Update my HTML code.html

--- a/my HTML code.html
+++ b/my HTML code.html
@@ -8,23 +8,23 @@
    <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet"> 
    <link rel="stylesheet" href="css/bootstrap.min.css">
    <link rel="stylesheet" href="css/mystyle.css">
-     <script src="js/typingjs.js"></script>
+     
  </head>
 <body>
   <div class="container">
     <div class="row">
-       <div class="col-md-6">
+       <div class="col-md-4">
            <img class="title-logo img-thumbnail" src="images/me.jpg" height="200" width="200"/>
        </div> 
-      <div class="col-md-6">
-        <h1 class="title-super text-thin  text-uppercase text-right">
+      <div class="col-md-8">
+        <h1 class="NameMove textr title-super text-thin  text-uppercase text-right">
             Dami Ajayi
         </h1>
-        <h4 class=" text-uppercase text-right">
+        <h4 class="textr titleM text-uppercase text-right">
           Front-end Ninja
         </h4>
-        <p style="color: grey" class="text-right">Learning web developer :)</p>
-        <section style="font-size:30px;">I just added some pictures i have of unilag<br> but on the course of this project I learnt<span class="txt-rotate" data-period="2000" data-rotate='[ " to use Bootstrap CSS & Javascript Frameworks.", " to write some nice Javascript codes( like this, which I tweaked).", " to Use Github", " to create JS modals, click on the pictures in the environ section to check them out.", " website responiveness." ]'> on this page to complete this project</span></section>
+        <p style="color: grey; font-size:20px" class="textr text-right">Learning web developer :)</p>
+        <section style="font-size:30px;" class="textr">I just added some pictures i have of unilag but on the course of this project<br> I learnt<span class="txt-rotate" data-period="2000" data-rotate='[ " to use Bootstrap CSS & Javascript Frameworks.", " to write some nice Javascript codes( like this, which I tweaked).", " to Use Github", " to create JS modals, click on the pictures in the environ section to check them out.", " website responiveness." ]'> on this page to complete this project</span></section>
       </div>
   </div>
 	<div class="row col-md-12">
@@ -37,26 +37,26 @@
     </div>
 	<div class="row">
 	   <div class="col-md-12">
-	      <h2 class="text-muted">Environs</h2>
+	      <h2 class="textr text-muted">Environs</h2>
 	   </div>
 	</div>
 	<div class="row text-center">
 	   <div class="col-md-6">
 	   <img class="img-responsive center-block img-thumbnail" src="images/tracks.jpg" height="400" width="325" data-toggle="modal" data-target="#first1" >
 	   
-		<h3>Unilag Sports Center</h3>
+		<h3 class="textr">Unilag Sports Center</h3>
 		<a href="https://github.com">Link to project</a>
 	   </div>
 	   <div class="col-md-6">
 	     <img class="img-responsive center-block img-thumbnail" src="images/library.jpg" height="400" width="325" data-toggle="modal" data-target="#first2">
-		<h3>Unilag Library</h3>
+		<h3 class="textr">Unilag Library</h3>
 		<a href="https://github.com">Link to project</a>
 	   </div>
 	</div>
 	<div class="row text-center">
 	   <div class="col-md-12">
 	   	<img class="img-responsive center-block img-thumbnail" src="images/finepic.jpg" height="400" width="325" data-toggle="modal" data-target="#first3">
-		<h3>Somewhere in Unilag</h3>
+		<h3 class="textr">Somewhere in Unilag</h3>
 		<a href="https://github.com">Link to project</a>
 	   </div>
 	</div>
@@ -107,23 +107,23 @@
   </div>
 </div>
 	<footer>
-	<address class="drow">
+	<address class="drow textr">
 		<div class="col-md-4 text-center">
      <strong style="font-size:25px;">Ajayi, Oluwadamilola</strong><br>
-	 <a class="testing" href="mailto:#">ajayidamey@gmail.com</a>
-	 <p class="testing">+234(0)812 785 2013</p>
+	 <a class="testing textr" href="mailto:#">ajayidamey@gmail.com</a>
+	 <p class="testing textr">+234(0)812 785 2013</p>
         </div>
         <div class="col-md-4 text-center">
-        	<a class="testing" style="font-size:30px;" href="www.twitter.com/DamiAjayi_"><strong>Twitter</strong></a>
+        	<a class="testing textr" style="font-size:30px;" href="www.twitter.com/DamiAjayi_"><strong>Twitter</strong></a>
         </div>
-        <div class="col-md-4 text-center">
-        	<a class="testing" style=" font-size:30px;" href="www.facebook.com/ajayidt"><strong>Facebook</strong></a>
+        <div class="col-md-4 text-center textr">
+        	<a class="testing textr" style=" font-size:30px;" href="www.facebook.com/ajayidt"><strong>Facebook</strong></a>
         </div>
 	</address>
 	</footer>
   </div>
     <script src="js/jQuery.js"></script>
 	<script src="js/bootstrap.min.js"> </script>
-
+<script src="js/typingjs.js"></script>
 </body>
 </html>
